lang.java.statics.test/tests/positive/classes/methods/innerclassformal.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class I {}
}

[B]
public class B {
    public void b(A a, A.I i) {}
}

